# capacitor-llama

./: .gitignore  .release-it.json  CantooCapacitorLlama.podspec  CapacitorLlama.podspec  Package.swift  README.md  package.json  rollup.config.mjs
android/: .gitignore  build.gradle  proguard-rules.pro
android/src/main/: CMakeLists.txt  jni-utils.cpp  jni-utils.h  jni.cpp
android/src/main/capllama/: CMakeLists.txt
android/src/main/java/com/capllama/: CapacitorLlama.java  CapacitorLlamaPlugin.java  LlamaContext.java  PartialCompletionCallback.java
android/src/main/java/com/mycompany/plugins/example/: CapacitorLlama.java  CapacitorLlamaPlugin.java
cpp/common/: chat.cpp  chat.h
electron/: rollup.config.mjs  tsconfig.json
electron/src/: index.ts
example-app/: package.json
example-app/android/: capacitor.settings.gradle
example-app/android/app/: capacitor.build.gradle
example-app/android/app/src/main/: AndroidManifest.xml
example-app/android/app/src/main/java/com/example/plugin/: MainActivity.java
example-app/electron/: package-lock.json  package.json
example-app/electron/src/: setup.ts  setupCapacitorElectronPlugins.js
example-app/electron/src/rt/: electron-plugins.js  electron-rt.ts
example-app/ios/App/: Podfile
example-app/ios/App/App.xcodeproj/: project.pbxproj
example-app/src/: index.html
example-app/src/js/: example.js
install/: download-native-artifacts.js  native-artifacts.json  write-native-artifacts-manifest.js
ios/: .gitignore
ios/Sources/CapacitorLlamaPlugin/: CAPLlama.h  CAPLlama.mm  CMakeLists.txt  CapacitorLlama.swift  CapacitorLlamaPlugin-Bridging-Header.h  CapacitorLlamaPlugin.swift  LlamaContext.h  LlamaContext.mm  test.mm
ios/Sources/CapacitorLlamaPlugin/capllama.xcframework/: Info.plist
ios/Sources/CapacitorLlamaPlugin/include/: CapacitorLlama.h
ios/Tests/CapacitorLlamaPluginTests/: CapacitorLlamaPluginTests.swift
scripts/: build-android.sh  build-ios.sh  gh-release.sh
src/: CapacitorLlama.ts  LlamaContext.ts  definitions.ts  index.ts  web.ts
